--- a/twillio video calling/Info.plist
+++ b/twillio video calling/Info.plist
@@ -41,5 +41,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    
+    <key>NSCameraUsageDescription</key>
+    <string>${PRODUCT_NAME} uses your camera to capture video which is shared with other room participants.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>${PRODUCT_NAME} uses your microphone to capture audio which is shared with other room participants.</string>
+    
 </dict>
 </plist>
